# CitrusToolbox

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  EditorData.json  README.md  build-win64.bat  citrus.natvis
engine/: CMakeLists.txt
engine/animation/: AnimationSystem.cpp  AnimationSystem.hpp  Bank.cpp  Bank.hpp  Canvas.cpp  Canvas.hpp  CustomPropSet.cpp  CustomPropSet.hpp  LayerBase.cpp  LayerBase.hpp  LayerClip.cpp  LayerClip.hpp  MorphSet.cpp  MorphSet.hpp  Skeleton.cpp  Skeleton.hpp  Spline.cpp  Spline.hpp
engine/asset/: AssetManager.cpp  AssetManager.hpp
engine/asset/types/: Mesh.cpp  Mesh.hpp  Texture.cpp  Texture.hpp  WAD.cpp  WAD.hpp
engine/audition/: AssetCatalogEditor.hpp  AssetCompilerBootstrap.cpp  AssetCompilerBootstrap.hpp  AuditionEditor.cpp  AuditionEditor.hpp  HotReloadDetection.cpp  HotReloadDetection.hpp  LiveSync.cpp  LiveSync.hpp  LiveSyncSocket.cpp
engine/audition/spaces/: AssetActions.cpp  AssetActions.hpp  AssetBrowser.cpp  AssetBrowser.hpp  Compiler.cpp  Compiler.hpp  HexViewer.cpp  HexViewer.hpp  ModuleInspector.cpp  ModuleInspector.hpp  Preferences.cpp  SpaceBase.hpp
engine/core/: Application.cpp  Application.hpp  AsyncTasks.cpp  AsyncTasks.hpp  Command.hpp  EngineCore.cpp  EngineCore.hpp  FileSystem.cpp  FileSystem.hpp  GameLayer.cpp  GameLayer.hpp  HotReloadDetection.cpp  HotReloadDetection.hpp  ImguiIntegration.cpp  ImguiIntegration.hpp  JobSystem.cpp  JobSystem.hpp  Logging.cpp  Logging.hpp  ModuleBase.cpp  ModuleBase.hpp  OSEvents.cpp  OSEvents.hpp  Settings.cpp  Settings.hpp  Translation.cpp  Translation.hpp  WindowManager.cpp  WindowManager.hpp
engine/formats/levelvm/: LevelVM.h
engine/formats/mesh/: GPUGeometry.h  RenderMesh.h
engine/formats/mo/: MO.cpp  MO.h
engine/formats/model/: Model.cpp  Model.hpp
engine/formats/package/: CitrusPackage.cpp  CitrusPackage.h
engine/formats/texture/: TextureLoad.cpp  TextureLoad.h
engine/formats/wad/: WADCore.c  WADCore.h
engine/gamelayer/: GameLayer.cpp  GameLayer.hpp
engine/gpu/: Architect.h  Binding.h  Bindless.h  Buffer.h  Commands.h  DebugUI.h  Device.h  Framebuffer.h  Pipeline.h  Present.h  RasterContext.h  RaytraceContext.h  Raytracer.h  Readback.h  Struct.h  Texture.h
engine/gpu/shared/: ArchitectGraphBuilder.cpp  ArchitectGraphBuilder.hpp  DeviceBase.hpp  ExternalLoading.cpp  ExternalLoading.hpp
engine/gpu/vulkan/: ArchitectVulkan.cpp  ArchitectVulkan.hpp  BindlessVulkan.cpp  BindlessVulkan.hpp  BufferVulkan.cpp  BufferVulkan.hpp  CommandsVulkan.cpp  CommandsVulkan.hpp  DebugUIVulkan.cpp  DeviceVulkan.cpp  DeviceVulkan.hpp  PipelineVulkan.cpp  PipelineVulkan.hpp  PresentVulkan.cpp  PresentVulkan.hpp  StructVulkan.cpp  StructVulkan.hpp  TextureVulkan.cpp  TextureVulkan.hpp
engine/interact/: DeviceBackendLayer.cpp  DeviceBackendLayer.hpp  InteractionEngine.cpp  InteractionEngine.hpp
engine/interact/backends/: BackendManifest.cpp  BackendManifest.hpp
engine/interact/interfaces/: Actions.hpp  Cursor.hpp  Message.hpp  Text.hpp  UserConfig.hpp
engine/ispc/: IspcKernels.h  Kernels.h
engine/middleware/: Im3dIntegration.cpp  Im3dIntegration.hpp  ImguiIntegration.cpp  ImguiIntegration.hpp  PhysXIntegration.cpp  PhysXIntegration.hpp
engine/physics/: Baking.hpp  Body.hpp  Character.hpp  Constraint.hpp  Module.hpp  Physics.hpp  Query.hpp  Ragdoll.hpp  Shape.hpp  Surface.hpp
engine/physics/jolt/: JoltArchive.cpp  JoltBaking.cpp  JoltBaking.hpp  JoltBody.cpp  JoltBody.hpp  JoltConstraint.hpp  JoltContext.cpp  JoltContext.hpp  JoltDebugRender.cpp  JoltDebugRender.hpp  JoltRagdoll.hpp  JoltShape.cpp  JoltShape.hpp
engine/physics/shared/: ConvexDecompose.cpp  Module.cpp  Surface.cpp  Surface.hpp
engine/reflect/: Reflect.cpp  Reflect.hpp  ReflectExtractor.cpp
engine/reflect/generators/: AngelScriptGenerator.cpp  AngelScriptGenerator.hpp  GeneratorBase.hpp  ImguiGenerator.cpp  ImguiGenerator.hpp  SerializationGenerator.cpp  SerializationGenerator.hpp
engine/renderer/: KeyLime.hpp  KeyLimeDataTypes.hpp  KeyLimeRenderer.cpp  KeyLimeRenderer.hpp  KeyLimeShared.cpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  TextureLoad.cpp  TextureLoad.h
engine/renderer/lowlevel/: GfxBase.cpp  GfxBase.hpp
engine/renderer/vulkan/: VkIm3d.cpp  (+10 more)
engine/resource/: JSONResource.cpp  JSONResource.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourceTypeBase.cpp  ResourceTypeBase.hpp
engine/scene/: DebugCamera.cpp  DebugCamera.hpp  SceneEngine.cpp  SceneEngine.hpp  SceneEngineBase.cpp  SceneEngineBase.hpp
engine/scripting/: LuaScript.cpp  ObjTypes.h  SwigWrap.i
engine/system/: CMakeLists.txt  System.h
engine/utilities/: BloomFilter.hpp  CSV.hpp  Color.hpp  Common.h  Common.hpp  Config.h.in  DynamicArray.cpp  DynamicArray.hpp  File.cpp  File.hpp  GUID.cpp  GUID.hpp  HandleManager.hpp  HandlePointer.cpp  HandlePointer.hpp  HandledList.hpp  Hash.cpp  Hash.hpp  HashTable.hpp  IndirectionTable.hpp  JSON.cpp  JSON.hpp  Math.cpp  Math.hpp  Math3d.hpp  Memory.cpp  Meta.hpp  Noise.cpp  Noise.hpp  Random.cpp  Random.hpp  Reflect.h  Reflect.hpp  RingBuffer.hpp  SharedLogging.c  SharedLogging.cpp  SharedLogging.h  SpacialQuery.hpp  StaticArray.hpp  String.cpp  (+7 more)
engine/wad/: WADCore.c  WADCore.h
game/: CMakeLists.txt  EditorData.json  Game.cpp  Game.hpp  GameCommon.hpp  GameEntryPoint.cpp  GameEntryPoint.h  GameRegister.cpp  GameRegister.hpp
game/toys/: FPSDemoPlayer.cpp  FPSDemoPlayer.hpp
tests/: AppTest.cpp  CMakeLists.txt  PackageTest.cpp  SceneTest.cpp  UtilitiesTest.cpp
tests/apps/: AppTest.cpp  CMakeLists.txt  ModelTest.cpp  PhysicsTest.cpp  SceneTest.cpp
tests/interactpaths/: CheckInteractPaths.py  InteractPaths.txt  SortedPaths.txt
tests/unit/: AllTests.h.in  CMakeLists.txt  UnitTestBase.cpp  UnitTestBase.hpp  UnitTests.cpp  UtilitiesTest.cpp
tools/compilemodel/: AnimationExport.cpp  CMakeLists.txt  CitrusModel.cpp  CitrusModel.hpp  ExportPhaseBase.hpp  MaterialExport.cpp  MeshExport.cpp  MeshExport.hpp  NavmeshExport.cpp  PhysicsExport.cpp  SceneExport.cpp  SkeletonExport.cpp  SkeletonExport.hpp  SplineExport.cpp  Viewer.cpp
(+261 files in other folders)
